# udp_streamer

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/: raw_udp_socket.h
client/src/: listener.cpp
server/src/: talker.cpp
src/: talker.cpp
